--- a/index.html
+++ b/index.html
@@ -9,11 +9,78 @@
     <title>Document</title>
 </head>
 
-<body class="bg-purple-500 flex justify-center mt-52">
-    <div class="w-20 grid h-20 outline rounded-xl outline-4 outline-red-600 outline-offset-4">
-        <div class="w-10 absolute h-10 ml-2.5 mt-6 rounded-xl bg-red-500 outline outline-4 outline-red-600 outline-offset-4"></div>
-        <div class="w-2 justify-self-end mt-2 mr-2 absolute h-2  rounded-xl bg-red-500 outline outline-4 outline-red-600 outline-offset-2"></div>
+<body class="bg-gradient-to-br from-black to-sky-500">
+    <div class="bg-gradient-to-tl from-yellow-500 to-green-500 pb-7 ">
+        <div class="invisible sm:visible pt-1 float-left ml-5 lg:ml-8">hello <div>World</div>
+        </div>
+        <div class="w-10 mt-3 visible sm:invisible ml-5 absolute float-left h-10 bg-red-500"></div>
+        <div class="invisible sm:visible ">
+
+            <nav>
+                <ul class="flex  gap-x-3 justify-end mr-8 pt-2">
+                    <li>Home</li>
+                    <li>Contact</li>
+                    <li>About</li>
+                    <li>Product</li>
+                </ul>
+            </nav>
+        </div>
     </div>
-    
+    <div class="mt-5 bg-red-500 grid pb-2 lg:pb-4">
+        <img class="object-cover w-60 h-auto justify-self-center sm:w-96 sm:justify-self-end sm:mr-40 sm:mt-10  outline outline-4 outline-white "
+            src="ronaldo-1200.jpg">
+        <div class="grid mt-4 lg:mt-28 lg:mr-96 lg:absolute">
+            <h1 class="font-bold pl-5 pr-5 justify-self-center lg:justify-self-auto lg:ml-24">The power of belief and
+                positive thinking</h1>
+            <h1 class="pl-5 lg:mr-48 lg:ml-20 lg:justify-self-center pr-5 pt-1">It is just the tip of the iceberg! And
+                yet DR SWATI KANNAN shares with us enough about the
+                current research on the power of belief to ask ourselves</h1>
+        </div>
+    </div>
+    <div class="mt-5 bg-red-500 grid pb-2 lg:pb-4">
+        <img class="object-cover w-60 h-auto justify-self-center sm:w-96 lg:justify-self-start lg:mr-40 sm:mt-10  outline outline-4 outline-white "
+            src="download.jpg">
+        <div class="grid mt-4 lg:mt-28   lg:absolute lg:justify-items-end">
+            <h1 class="font-bold lg:mr-52 pl-5 pr-5 justify-self-center lg:justify-self-auto lg:ml-24">The power of belief and
+                positive thinking</h1>
+            <h1 class="pl-5 lg:ml-[26rem] lg:mr-20  pt-1">It is just the tip of the iceberg! And
+                yet DR SWATI KANNAN shares with us enough about the
+                current research on the power of belief to ask ourselves</h1>
+        </div>
+    </div>
+    <div class="mt-5 bg-red-500 grid pb-2 lg:pb-4">
+        <img class="object-cover w-60 h-auto justify-self-center sm:w-96 sm:justify-self-end sm:mr-40 sm:mt-10  outline outline-4 outline-white "
+            src="ronaldo-1200.jpg">
+        <div class="grid mt-4 lg:mt-28 lg:mr-96 lg:absolute">
+            <h1 class="font-bold pl-5 pr-5 justify-self-center lg:justify-self-auto lg:ml-24">The power of belief and
+                positive thinking</h1>
+            <h1 class="pl-5 lg:mr-48 lg:ml-20 lg:justify-self-center pr-5 pt-1">It is just the tip of the iceberg! And
+                yet DR SWATI KANNAN shares with us enough about the
+                current research on the power of belief to ask ourselves</h1>
+        </div>
+    </div>
+    <div class="mt-5 bg-red-500 grid pb-2 lg:pb-4">
+        <img class="object-cover w-60 h-auto justify-self-center sm:w-96 lg:justify-self-start lg:mr-40 sm:mt-10  outline outline-4 outline-white "
+            src="download.jpg">
+        <div class="grid mt-4 lg:mt-28   lg:absolute lg:justify-items-end">
+            <h1 class="font-bold lg:mr-52 pl-5 pr-5 justify-self-center lg:justify-self-auto lg:ml-24">The power of belief and
+                positive thinking</h1>
+            <h1 class="pl-5 lg:ml-[26rem] lg:mr-20  pt-1">It is just the tip of the iceberg! And
+                yet DR SWATI KANNAN shares with us enough about the
+                current research on the power of belief to ask ourselves</h1>
+        </div>
+    </div>
+    <div class="mt-5 bg-red-500 grid pb-2 lg:pb-4">
+        <img class="object-cover w-60 h-auto justify-self-center sm:w-96 sm:justify-self-end sm:mr-40 sm:mt-10  outline outline-4 outline-white "
+            src="ronaldo-1200.jpg">
+        <div class="grid mt-4 lg:mt-28 lg:mr-96 lg:absolute">
+            <h1 class="font-bold pl-5 pr-5 justify-self-center lg:justify-self-auto lg:ml-24">The power of belief and
+                positive thinking</h1>
+            <h1 class="pl-5 lg:mr-48 lg:ml-20 lg:justify-self-center pr-5 pt-1">It is just the tip of the iceberg! And
+                yet DR SWATI KANNAN shares with us enough about the
+                current research on the power of belief to ask ourselves</h1>
+        </div>
+    </div>
 </body>
+
 </html>
